...
                android:textAlignment="center" />


        </RelativeLayout>

        <TextView
            android:id="@+id/logout"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="#ff4656"
            android:background="@drawable/button_selector"
...
