...
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratingBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">


...
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/profileIv"
...
