...
                android:textColor="#ff00d0"
                android:textAlignment="center" />


        </RelativeLayout>
        <TextView
            android:id="@+id/ratingUp_someone"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratingUp"
            android:textColor="#ff4656"
            android:background="@drawable/button_selector"
...
